--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "^1.7.9",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.6",
-    "next": "^15.1.6",
+    "next": "15.1.6",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,7 +31,11 @@
     "typescript": "^5.7.3",
     "zustand": "^5.0.3"
   },
-  "keywords": ["food", "marketplace", "local"],
+  "keywords": [
+    "food",
+    "marketplace",
+    "local"
+  ],
   "author": "",
   "license": "ISC"
 }
