--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.6",
+    "lucide-react": "^0.561.0",
     "next": "^15.5.9",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
