Add backend integrations, legal pages, and Agora tokens
Implement full API layer with Supabase and third-party fallbacks, wire client helpers and validation updates, add legal policy pages, docs, env examples, and Agora token generation for live streams.

--- a/env.example
+++ b/env.example
@@ -12,7 +12,32 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 # Database URL (for server-side operations)
 DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.icntzxgwrnidzpxdplbm.supabase.co:5432/postgres
 
-# Optional: Other environment variables
+# Stripe Configuration
+# Get these from: https://dashboard.stripe.com/apikeys
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
+STRIPE_SECRET_KEY=sk_test_your_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# Stripe Connect (for chef/driver payouts)
+# Get from: https://dashboard.stripe.com/settings/applications
+STRIPE_CONNECT_CLIENT_ID=ca_your_client_id_here
+
+# Checkr Configuration (Background Checks)
+# Get from: https://dashboard.checkr.com/account/api_keys
+CHECKR_API_KEY=your_checkr_api_key_here
+
+# Agora Configuration (Live Streaming)
+# Get from: https://console.agora.io/
+AGORA_APP_ID=your_agora_app_id_here
+AGORA_APP_CERTIFICATE=your_agora_certificate_here
+
+# SendGrid Configuration (Email Notifications)
+# Get from: https://app.sendgrid.com/settings/api_keys
+SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
+SENDGRID_FROM_EMAIL=noreply@neighboreats.com
+
+# Application Configuration
 NODE_ENV=development
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 
