--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^22.10.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "agora-access-token": "^2.0.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "eslint": "^9.18.0",
