Add complete Stripe payment integration with 15% commission collection
Implement full payment flow with automatic commission splits:
- Backend: Activate Stripe SDK in payment APIs (create-payment-intent, webhook, connect-account)
- Frontend: Add Stripe Elements checkout with 2-step flow
- Components: Create StripeCheckout and ConnectOnboarding widgets
- Chef/Driver: Add Connect onboarding to profile pages
- Earnings: Display commission breakdown (85% chef / 15% platform)
- Database: Add migration for stripe_customer_id and stripe_verified fields
- Docs: Add STRIPE_SETUP.md, STRIPE_IMPLEMENTATION_SUMMARY.md, and QUICK_START_PAYMENTS.md

Payment features:
✓ Automatic 15% platform commission on all orders
✓ Direct 85% payout to chef's Stripe Connect account
✓ PCI-compliant card collection via Stripe Elements
✓ Webhook handling with signature verification
✓ Real-time payment status updates
✓ Mock mode fallback when Stripe not configured

Ready to use: Add Stripe keys to .env.local and run database migration

--- a/env.example
+++ b/env.example
@@ -14,12 +14,18 @@ DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.icntzxgwrnidzpxdplbm.supab
 
 # Stripe Configuration
 # Get these from: https://dashboard.stripe.com/apikeys
+# Used for payment processing with 15% platform commission
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
 STRIPE_SECRET_KEY=sk_test_your_key_here
+
+# Stripe Webhook Secret
+# Development: Use Stripe CLI - run: stripe listen --forward-to localhost:3000/api/payments/webhook
+# Production: Get from https://dashboard.stripe.com/webhooks after adding endpoint
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
 # Stripe Connect (for chef/driver payouts)
 # Get from: https://dashboard.stripe.com/settings/applications
+# Enables chefs/drivers to receive 85% of order value directly
 STRIPE_CONNECT_CLIENT_ID=ca_your_client_id_here
 
 # Checkr Configuration (Background Checks)
